--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     },
     "devDependencies": {
         "axios": "^1.1.2",
-        "bootstrap": "^4.6.0",
-        "jquery": "^3.6",
+        "bootstrap": "^4.6.2",
         "laravel-mix": "^6.0.49",
+        "popper.js": "1.16",
         "resolve-url-loader": "^3.1.2",
-        "sass": "^1.56.1",
+        "sass": "^1.60.0",
+        "sass-loader": "^13.2.1",
         "vue": "^3.2.47",
         "vue-loader": "^16.8.3"
     },
@@ -23,8 +24,9 @@
         "@vue/compiler-sfc": "^3.2.47",
         "chart.js": "^3.5.0",
         "feather-icons": "^4.28.0",
+        "jquery": "^3.6.4",
         "noty": "^3.2.0-beta-deprecated",
-        "popper.js": "^1.16.1",
+        "postcss": "^8.4.21",
         "postcss-import": "^15.1.0",
         "vue-router": "^4.1.6",
         "vuex": "^4.1.0"
