--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.4.2",
         "axios": "^1.1.2",
         "bootstrap": "^4.6.2",
+        "dotenv": "^16.0.3",
         "laravel-mix": "^6.0.49",
         "popper.js": "1.16",
         "resolve-url-loader": "^3.1.2",
@@ -25,6 +28,7 @@
         "chart.js": "^3.5.0",
         "feather-icons": "^4.28.0",
         "jquery": "^3.6.4",
+        "lodash": "^4.17.21",
         "noty": "^3.2.0-beta-deprecated",
         "postcss": "^8.4.21",
         "postcss-import": "^15.1.0",
