--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "postcss": "^8.4.21",
         "postcss-import": "^15.1.0",
         "vue-router": "^4.1.6",
+        "vue-template-compiler": "^2.7.14",
         "vuex": "^4.1.0"
     },
     "keywords": [],
