--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
         "popper.js": "1.16",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.60.0",
-        "sass-loader": "^13.2.1",
+        "sass-loader": "^13.2.2",
         "vue": "^3.2.47",
         "vue-loader": "^16.8.3"
     },
     "dependencies": {
+        "@vueform/multiselect": "^2.6.2",
         "chart.js": "^3.5.0",
         "jquery": "^3.6.4",
         "lodash": "^4.17.21",
+        "node-sass": "^8.0.0",
         "noty": "^3.2.0-beta-deprecated",
         "postcss": "^8.4.21",
         "postcss-import": "^15.1.0",
