--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "noty": "^3.2.0-beta-deprecated",
         "postcss": "^8.4.21",
         "postcss-import": "^15.1.0",
+        "vue-i18n": "^9.2.2",
         "vue-router": "^4.1.6",
         "vuex": "^4.1.0"
     },
