--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "vue-loader": "^16.8.3"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^37.1.0",
+        "@ckeditor/ckeditor5-vue": "^5.1.0",
         "@vueform/multiselect": "^2.6.2",
         "jquery": "^3.6.4",
         "lodash": "^4.17.21",
