--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
         "vue-loader": "^16.8.3"
     },
     "dependencies": {
-        "@ckeditor/ckeditor5-build-classic": "^37.1.0",
-        "@ckeditor/ckeditor5-vue": "^5.1.0",
         "@vueform/multiselect": "^2.6.2",
         "jquery": "^3.6.4",
         "lodash": "^4.17.21",
@@ -34,6 +32,8 @@
         "noty": "^3.2.0-beta-deprecated",
         "postcss": "^8.4.21",
         "postcss-import": "^15.1.0",
+        "primevue": "^3.29.1",
+        "quill": "^1.3.7",
         "vue-i18n": "^9.2.2",
         "vue-router": "^4.1.6",
         "vuex": "^4.1.0"
